crux-mir-comp/test/symb_eval/cryptol/basic_err_tuple_size.good
test basic_err_tuple_size/3a1fbbbh::test[0]: FAILED

failures:

---- basic_err_tuple_size/3a1fbbbh::test[0] counterexamples ----
Failure for test/symb_eval/cryptol/basic_err_tuple_size.rs:8:57: 8:67: error: in basic_err_tuple_size/3a1fbbbh::test[0]
error loading "tupleArg": type mismatch in argument 0: Cryptol type ([8], [8]) does not match Rust type (u8, u8, u8): tuple size 2 does not match 3

[Crux] Overall status: Invalid.
